# chordthingy

./: Cargo.toml
src/: app.rs  history.rs  main.rs  mappings.rs
src/input/: input_device.rs  mod.rs  output_char.rs
src/keyboard/: chord.rs  ev_dev.rs  key_code.rs  mod.rs  output_char.rs
src/keyboard/backend/: ev_dev.rs  mod.rs  rdev_backend.rs  x11.rs
