[package]
name = "chordthingy"
version = "0.1.0"
authors = ["elkowar <5300871+elkowar@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev-rs="0.4"

anyhow = "1.0"
maplit = "1"
derive_more = "0.99"
itertools = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"

[dev-dependencies]
pretty_assertions = "0.6.1"
